--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,12 @@
 [package]
-name = "Forager"
+name = "forager"
 version = "0.1.0"
 authors = ["mzyzc <mzyzc@czyz.xyz>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies.gtk]
-version = "0.9.2"
-features = ["v3_16"]
-
-[dependencies.gio]
-version = ""
-features = ["v2_44"]
-
-[dependencies.curl]
-version = "0.4"
+[dependencies]
+gtk = { version = "0.9.2", features = ["v3_16"] }
+gio = { version = "", features = ["v2_44"] }
+curl = "0.4"
