--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gtk = { version = "0.9.2", features = ["v3_16"] }
-gio = { version = "", features = ["v2_44"] }
+gtk = { version = "0.15" }
+gio = { version = "0.15" }
 curl = "0.4"
 roxmltree = "0.13"
